Made changes to sessions controller and views adding more functionality.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Crowdfunder</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+ 
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <% if flash[:notice] %>
+    <p id="notice"><%= flash[:notice] %></p>
+  <% end %>
+
+  <% if flash[:alert] %>
+    <p id="alert"><%= flash[:alert] %></p>
+  <% end %>
+
+  <div class="current_user">
+    <% if current_user %>
+      <p>Signed is as current_user.name</p>
+      <p><%= link_to "Logout", session_path("current"), :method => :delete %></p>
+    <% else %>
+    <%= link_to "Login", new_session_path %>
+    or
+    <%= link_to "Sign up", new_user_path %>
+    <% end %>
+
+  </div>
 
 <%= yield %>
 
