--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,5 +13,6 @@
 <h3><strong>End Date: </strong><%= @project.end_date %></h3>
 <p><%= @project.description %></p>
 
+<h2><%= link_to 'Add Rewards', new_reward_path(@project) %></h2>
 
 
