--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
+
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
@@ -13,6 +14,25 @@
 <h3><strong>End Date: </strong><%= @project.end_date %></h3>
 <p><%= @project.description %></p>
 
-<h2><%= link_to 'Add Rewards', new_reward_path(@project) %></h2>
+
+<h2>Rewards</h2>
+
+<h5><%= link_to 'Add Rewards', new_project_reward_path(@project) %></h5>
+
+<% @project.rewards.each do |reward| %>
+  <h3><%= reward.name %></h3>
+  <p>Cost: $<%= reward.price %></p>
+  <p>Description: <%= reward.description %></p>
+  <p>Backer Limit: <%= reward.backer_limit %></p>
+
+<p>
+  <%= link_to 'Edit', edit_project_reward_path(@project, reward) %>
+  |
+  <%= link_to "Delete", project_reward_path(@project, reward), method: :delete, data: {confirm: "Are you sure you want to delete this reward?"} %>
+</p>   
+
+
+
+<% end %>
 
 
