--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <div class="current_user">
     <% if current_user %>
-      <p>Signed is as current_user.name</p>
+      <p>Signed is as <%= current_user.first_name %> <%= current_user.last_name %> </p>
       <p><%= link_to "Logout", session_path("current"), :method => :delete %></p>
     <% else %>
     <%= link_to "Login", new_session_path %>
