Able to add pledges to each project now.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -32,30 +32,15 @@
 </p>   
 <% end %>
 
-<h2>Rewards</h2>
-
-<h5><%= link_to 'Add Rewards', new_project_reward_path(@project) %></h5>
-
-<% @project.rewards.each do |reward| %>
-  <h3><%= reward.name %></h3>
-  <p>Cost: $<%= reward.price %></p>
-  <p>Description: <%= reward.description %></p>
-  <p>Backer Limit: <%= reward.backer_limit %></p>
-
-<p>
-  <%= link_to 'Edit', edit_project_reward_path(@project, reward) %>
-  |
-  <%= link_to "Delete", project_reward_path(@project, reward), method: :delete, data: {confirm: "Are you sure you want to delete this reward?"} %>
-</p>   
-<% end %>
-
 <h3>Pledges</h3>
 <h5><%= link_to 'Make a Pledge', new_project_pledge_path(@project) %></h5>
 <% @project.pledges.each do |pledge| %>
   
   <h5><%= pledge.amount  %></h5>
   <p><%= pledge.created_at %></p>
-  <p>Given by: <%= pledge.backer_id %></p>   
+  <p>Given by: <%= pledge.backer_id %></p>
+
+  <%= link_to "Delete", project_pledge_path(@project, pledge), method: :delete, data: {confirm: "Are you sure you want to delete this pledge?"} %>   
 <% end %>
 
 
