Added amount_raised column to Projects table. Updated column to have default value of -zsh then changed Projects show to display amount raised.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,7 +9,7 @@
 <img src="<%= @project.photo_url %>" alt="">
 
 <h3><strong>Funding goal:</strong> $<%= @project.funding_goal %></h3>
-
+<h3><strong>Amount raised:</strong> $<%= @project.amount_raised %></h3>
 <h3><strong>Start Date: </strong><%= @project.start_date %></h3>
 <h3><strong>End Date: </strong><%= @project.end_date %></h3>
 <p><%= @project.description %></p>
