--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -36,9 +36,9 @@
 <h5><%= link_to 'Make a Pledge', new_project_pledge_path(@project) %></h5>
 <% @project.pledges.each do |pledge| %>
   
-  <h5><%= pledge.amount  %></h5>
+  <h5><%= pledge.amount %></h5>
   <p><%= pledge.created_at %></p>
-  <p>Given by: <%= pledge.backer_id %></p>
+  <p>Given by: <%= User.find(pledge.backer_id).first_name %> <%= User.find(pledge.backer_id).last_name %></p>
 
   <%= link_to "Delete", project_pledge_path(@project, pledge), method: :delete, data: {confirm: "Are you sure you want to delete this pledge?"} %>   
 <% end %>
