--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,7 +5,8 @@
 <%= link_to 'Back', projects_path %>
 
 <h1><%= @project.name %></h1>
-
+<p>This is your project! You can make changes to your project below</p>
+<p>You have <Strong><%= @project.days_left %> days left</Strong> until your campaign is complete!</p>
 <img src="<%= @project.photo_url %>" alt="">
 
 <h3><strong>Funding goal:</strong> $<%= @project.funding_goal %></h3>
