Added Ajax functionality to rewards new, edit, create and update with corresponding changes in the rewards controller and added corresponding .js.erb files

--- a/app/views/rewards/_form.html.erb
+++ b/app/views/rewards/_form.html.erb
@@ -1,5 +1,4 @@
-<div id="rewards">
-  <%= form_for([@project, @reward]) do |f| %>
+  <%= form_for([@project, @reward], remote: true) do |f| %>
 
     <div class="field">
       <%= f.label :name  %>
@@ -26,4 +25,3 @@
     </div>
 
   <% end %>
-</div>
