--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,22 +17,13 @@
 
 <h2>Rewards</h2>
 
-<h5><%= link_to 'Add Rewards', new_project_reward_path(@project) %></h5>
-
-<% @project.rewards.each do |reward| %>
-  <h3><%= reward.name %></h3>
-  <p>Cost: $<%= reward.price %></p>
-  <p>Description: <%= reward.description %></p>
-  <p>Backer Limit: <%= reward.backer_limit %></p>
-
-<p>
-  <%= link_to 'Edit', edit_project_reward_path(@project, reward) %>
-  |
-  <%= link_to "Delete", project_reward_path(@project, reward), method: :delete, data: {confirm: "Are you sure you want to delete this reward?"} %>
-</p>   
+<h5><%= link_to 'Add Rewards', new_project_reward_path(@project), id: "add_reward_link", remote: true %></h5>
+<div id="rewards">
+	<% @project.rewards.each do |reward| %>
+		<%= render partial: 'rewards/reward', locals: {reward: reward} %>
+	<% end %>
+</div>
 
 
-
-<% end %>
 
 
