--- a/app/views/rewards/edit.js.erb
+++ b/app/views/rewards/edit.js.erb
@@ -1,3 +1,3 @@
-$('#edit_reward_link').hide().after('<%= j render('form') %>')
-$('.content').hide();
-$('#delete_reward_link').hide();
+// $('#edit_reward_link').hide();
+$('#reward_<%= @reward.id %>').hide().after('<%= j render('form') %>');
+// $('#delete_reward_link').hide();
