--- a/app/views/rewards/update.js.erb
+++ b/app/views/rewards/update.js.erb
@@ -1,4 +1,4 @@
-$('#edit_reward_link').show();
-$('.reward_options').hide()
-$('#rewards').append('<%= j render partial: 'rewards/reward', locals: {reward: @reward} %>');
+// $('#edit_reward_link').show();
+// $('.reward_options').hide()
+$('#reward_<%= @reward.id %>').show();
 $('#edit_reward_<%= @reward.id %>').html("");
