--- a/app/views/pledges/_form.html.erb
+++ b/app/views/pledges/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@project, @pledge]) do |f| %>
+<%= form_for([@project, @pledge], remote: true) do |f| %>
   <% if @pledge.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pledge.errors.count, "error") %> prohibited this pledge from being saved:</h2>
