--- a/app/views/pledges/_pledge.html.erb
+++ b/app/views/pledges/_pledge.html.erb
@@ -3,4 +3,4 @@
 	  <p><%= pledge.created_at %></p>
 	  <p>Given by: <%= User.find(pledge.backer_id).first_name %> <%= User.find(pledge.backer_id).last_name %></p>
 
-	  <%= link_to "Delete", project_pledge_path(@project, pledge), method: :delete, data: {confirm: "Are you sure you want to delete this pledge?"} %>  
+	  <%= link_to "Delete", project_pledge_path(@project, pledge), method: :delete, data: {confirm: "Are you sure you want to delete this pledge?"}, remote: true %>  
