--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -24,31 +24,22 @@
 
 <h2>Rewards</h2>
 
-<h5><%= link_to 'Add Rewards', new_project_reward_path(@project) %></h5>
+<h5><%= link_to 'Add Rewards', new_project_reward_path(@project), id: "add_reward_link", remote: true %></h5>
+<div id="rewards">
+	<% @project.rewards.each do |reward| %>
+		<%= render partial: 'rewards/reward', locals: {reward: reward} %>
+	<% end %>
+</div>
 
-<% @project.rewards.each do |reward| %>
-  <h3><%= reward.name %></h3>
-  <p>Cost: $<%= reward.price %></p>
-  <p>Description: <%= reward.description %></p>
-  <p>Backer Limit: <%= reward.backer_limit %></p>
-
-<p>
-  <%= link_to 'Edit', edit_project_reward_path(@project, reward) %>
-  |
-  <%= link_to "Delete", project_reward_path(@project, reward), method: :delete, data: {confirm: "Are you sure you want to delete this reward?"} %>
-</p>   
-<% end %>
 
 <h3>Pledges</h3>
-<h5><%= link_to 'Make a Pledge', new_project_pledge_path(@project) %></h5>
-<% @project.pledges.each do |pledge| %>
-  
-  <h5><%= pledge.amount %></h5>
-  <p><%= pledge.created_at %></p>
-  <p>Given by: <%= User.find(pledge.backer_id).first_name %> <%= User.find(pledge.backer_id).last_name %></p>
 
-  <%= link_to "Delete", project_pledge_path(@project, pledge), method: :delete, data: {confirm: "Are you sure you want to delete this pledge?"} %>   
-<% end %>
+<h5><%= link_to 'Make a Pledge', new_project_pledge_path(@project), id: "add_pledge_link", remote: true %></h5>
+<div id='pledge_div'>
+	<% @project.pledges.each do |pledge| %>
+	  <%= render partial: 'pledges/pledge', locals: {pledge: pledge} %> 
+	<% end %>
+</div>
 
 
 
