--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,6 +21,8 @@
 <h3><strong>End Date: </strong><%= @project.end_date %></h3>
 <p><%= @project.description %></p>
 
+<h2>Tags</h2>
+
 
 <h2>Rewards</h2>
 
